--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/borghoff/node-hello-world/issues"
   },
-  "homepage": "https://github.com/borghoff/node-hello-world#readme"
+  "homepage": "https://github.com/borghoff/node-hello-world#readme",
+  "dependencies": {
+    "dotenv": "^16.4.7"
+  }
 }
